added about us page and final seo fixes

--- a/index.html
+++ b/index.html
@@ -356,13 +356,15 @@
               >
             </li>
             <li class="nav-item">
+              <a class="nav-link" href="../../inner_pages/about_us.html">About Us</a>
+            </li>
+            <li class="nav-item">
               <a class="nav-link" href="https://tally.so/r/nWKkvQ"
                 >Contact Us</a
               >
             </li>
           </ul>
         </div>
-
         <!-- Right section: Language Switcher + Button + Menu Icon -->
         <div class="topnav d-flex align-items-center gap-3">
           <!-- Language Switcher -->
