--- a/inner_pages/about_us.html
+++ b/inner_pages/about_us.html
@@ -6,23 +6,47 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta
       name="viewport"
-      content="width=device-width, initial-scale=1, maximum-scale=1"
+      content="width=device-width, initial-scale=1, maximum-scale=5"
     />
     <meta
       name="keywords"
-      content="HTML5 Template Hubfolio Multi-Purpose themeforest"
+      content="about wk.pages, digital agency, UI/UX design, web development, performance marketing, branding, Warsaw"
     />
     <meta
       name="description"
-      content="Hubfolio - Multi-Purpose HTML5 Template"
+      content="Learn about WK.Pages: a leading digital agency in Warsaw specializing in UI/UX design, web development, performance marketing, branding, and business growth."
     />
-    <meta name="author" content="" />
+    <meta name="author" content="WK.Pages" />
+    <meta name="robots" content="index, follow, max-image-preview:large, max-snippet:-1, max-video-preview:-1" />
+    <meta name="language" content="en" />
 
     <!-- Title  -->
-    <title>Hubfolio</title>
+    <title>About Us | WK.Pages Digital Agency Warsaw</title>
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:title" content="About Us | WK.Pages Digital Agency Warsaw" />
+    <meta property="og:description" content="Learn about WK.Pages: a leading digital agency in Warsaw specializing in UI/UX design, web development, performance marketing, branding, and business growth." />
+    <meta property="og:image" content="https://wkpages.com/assets/imgs/square_logo.jpg" />
+    <meta property="og:image:width" content="1200" />
+    <meta property="og:image:height" content="630" />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://wkpages.com/inner_pages/about_us.html" />
+    <meta property="og:locale" content="en_US" />
+    <meta property="og:site_name" content="wk.pages" />
+
+    <!-- Twitter -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="About Us | WK.Pages Digital Agency Warsaw" />
+    <meta name="twitter:description" content="Learn about WK.Pages: a leading digital agency in Warsaw specializing in UI/UX design, web development, performance marketing, branding, and business growth." />
+    <meta name="twitter:image" content="https://wkpages.com/assets/imgs/square_logo.jpg" />
+
+    <!-- Canonical URL -->
+    <link rel="canonical" href="https://wkpages.com/inner_pages/about_us.html" />
+    <link rel="alternate" href="https://wkpages.com/inner_pages/about_us.html" hreflang="en" />
+    <link rel="alternate" href="https://wkpages.com/inner_pages/about_us.html" hreflang="x-default" />
 
     <!-- Favicon -->
-    <link rel="shortcut icon" href="assets/imgs/favicon.ico" />
+    <link rel="shortcut icon" href="../assets/imgs/favicon.ico" />
 
     <!-- Google Fonts -->
     <link
@@ -41,6 +65,42 @@
     <link rel="stylesheet" href="../common/css/common_style.css" />
     <link rel="stylesheet" href="assets/css/inner_pages.css" />
     <link rel="stylesheet" href="../assets/css/home2-style.css" />
+
+    <!-- Schema.org markup for BreadcrumbList -->
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "BreadcrumbList",
+        "itemListElement": [
+          {
+            "@type": "ListItem",
+            "position": 1,
+            "name": "Home",
+            "item": "https://wkpages.com/"
+          },
+          {
+            "@type": "ListItem",
+            "position": 2,
+            "name": "About Us",
+            "item": "https://wkpages.com/inner_pages/about_us.html"
+          }
+        ]
+      }
+    </script>
+    <!-- Schema.org markup for WebSite -->
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "WebSite",
+        "name": "WK.Pages",
+        "url": "https://wkpages.com",
+        "potentialAction": {
+          "@type": "SearchAction",
+          "target": "https://wkpages.com/search?q={search_term_string}",
+          "query-input": "required name=search_term_string"
+        }
+      }
+    </script>
 
     <style>
       .lang-switcher {
@@ -138,6 +198,16 @@
               <a class="nav-link active" href="#">Home</a>
             </li>
             <li class="nav-item">
+              <a
+                class="nav-link"
+                href="https://1drv.ms/b/c/f23709bddb7ed08a/EUBBw4xHDVBKjSRGXLBc38kBcefUa_8BneHpFWC65rF6tw?e=XUEnnH"
+                >Portfolio</a
+              >
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="../../inner_pages/about_us.html">About Us</a>
+            </li>
+            <li class="nav-item">
               <a class="nav-link" href="https://tally.so/r/nWKkvQ"
                 >Contact Us</a
               >
@@ -192,6 +262,79 @@
 
             <li>
               <div class="o-hidden">
+                <a
+                  href="https://1drv.ms/b/c/f23709bddb7ed08a/EUBBw4xHDVBKjSRGXLBc38kBcefUa_8BneHpFWC65rF6tw?e=XUEnnH"
+                  class="link"
+                  ><span class="fill-text" data-text="Portfolio"
+                    >Portfolio</span
+                  ></a
+                >
+              </div>
+            </li>
+            <li>
+              <div class="o-hidden">
+                <div class="link cursor-pointer dmenu">
+                  <span class="fill-text" data-text="Services">Services</span>
+                  <i></i>
+                </div>
+              </div>
+              <div class="sub-menu">
+                <ul>
+                  <li>
+                    <a
+                      href="https://www.wkpages.com/services/web_dev/index.html"
+                      class="sub-link"
+                      >Web Development</a
+                    >
+                  </li>
+                  <li>
+                    <a
+                      href="https://www.wkpages.com/services/smm/index.html"
+                      class="sub-link"
+                      >SMM</a
+                    >
+                  </li>
+                  <li>
+                    <a
+                      href="https://www.wkpages.com/services/seo/index.html"
+                      class="sub-link"
+                      >SEO</a
+                    >
+                  </li>
+                  <li>
+                    <a
+                      href="https://www.wkpages.com/services/meta_ads/index.html"
+                      class="sub-link"
+                      >Facebook Ads</a
+                    >
+                  </li>
+                  <li>
+                    <a
+                      href="https://www.wkpages.com/services/google_ads/index.html"
+                      class="sub-link"
+                      >Google Ads</a
+                    >
+                  </li>
+                  <li>
+                    <a
+                      href="https://www.wkpages.com/services/email_marketing/index.html"
+                      class="sub-link"
+                      >Email marketing</a
+                    >
+                  </li>
+                  <li>
+                    <a
+                      href="https://www.wkpages.com/services/designs/index.html"
+                      class="sub-link"
+                      >UI/UX and Graphics</a
+                    >
+                  </li>
+                </ul>
+              </div>
+            </li>
+
+            <li>
+              <div class="o-hidden">
                 <a href="https://tally.so/r/nWKkvQ" class="link"
                   ><span class="fill-text" data-text="Contact Us"
                     >Contact Us</span
@@ -229,6 +372,7 @@
         </div>
       </div>
     </div>
+
     <!-- ==================== End Navbar ==================== -->
 
     <div id="smooth-wrapper">
@@ -279,7 +423,7 @@
                         <div class="text">
                           <p>
                             Our team blends creativity, technology, and marketing strategy to deliver complete digital solutions that not only look great but also drive conversions, engagement, and long-term success. 
-                            We’re obsessed with results — and our work speaks for itself.
+                            We're obsessed with results — and our work speaks for itself.
                           </p>
                         </div>
           
@@ -289,7 +433,7 @@
           
                         <div class="text mt-20">
                           <p>
-                            We don’t chase trends — we build strategies that endure. 
+                            We don't chase trends — we build strategies that endure. 
                             Whether it's a logo, website, marketing campaign, or UGC production, everything we deliver is backed by research, creativity, and a clear focus on ROI. 
                             With wk.pages, you don't just get services — you get a real competitive edge.
                           </p>
@@ -361,8 +505,8 @@
                       <div class="text mt-20">
                         <p>
                           At wk.pages, we hold ourselves accountable for your success. 
-                          We guarantee that our creative, development, and marketing solutions will strengthen your brand, drive measurable engagement, and support your business objectives — or we aren’t satisfied. 
-                          Because with us, it’s never just about making things look good. It's about delivering real growth.
+                          We guarantee that our creative, development, and marketing solutions will strengthen your brand, drive measurable engagement, and support your business objectives — or we aren't satisfied. 
+                          Because with us, it's never just about making things look good. It's about delivering real growth.
                         </p>
                       </div>
                     </div>
@@ -424,9 +568,49 @@
                     </div>
                     <div class="col-md-6">
                       <div class="item mb-60">
-                        <h6>Open Position</h6>
-                        <p>Senior Front-end Wordpress Developer (Remote)</p>
-                        <p>UI/UX Designer (Remote)</p>
+                        <h6>Our Services</h6>
+                        <p>
+                          <a
+                            href="https://www.wkpages.com/services/web_dev/index.html"
+                            >Web Development</a
+                          >
+                        </p>
+                        <p>
+                          <a
+                            href="https://www.wkpages.com/services/smm/index.html"
+                            >SMM</a
+                          >
+                        </p>
+                        <p>
+                          <a
+                            href="https://www.wkpages.com/services/seo/index.html"
+                            >SEO</a
+                          >
+                        </p>
+                        <p>
+                          <a
+                            href="https://www.wkpages.com/services/meta_ads/index.html"
+                            >Facebook Ads</a
+                          >
+                        </p>
+                        <p>
+                          <a
+                            href="https://www.wkpages.com/services/google_ads/index.html"
+                            >Google Ads</a
+                          >
+                        </p>
+                        <p>
+                          <a
+                            href="https://www.wkpages.com/services/email_marketing/index.html"
+                            >Email Marketing</a
+                          >
+                        </p>
+                        <p>
+                          <a
+                            href="https://www.wkpages.com/services/designs/index.html"
+                            >UI/UX and Graphics</a
+                          >
+                        </p>
                       </div>
                     </div>
                     <div class="col-md-6">
