--- a/services/designs/index.html
+++ b/services/designs/index.html
@@ -201,6 +201,9 @@
                 >Contact Us</a
               >
             </li>
+            <li class="nav-item">
+              <a class="nav-link" href="../../inner_pages/about_us.html">About Us</a>
+            </li>
           </ul>
         </div>
 
@@ -326,6 +329,13 @@
                     >Contact Us</span
                   ></a
                 >
+              </div>
+            </li>
+            <li>
+              <div class="o-hidden">
+                <a href="../../inner_pages/about_us.html" class="link">
+                  <span class="fill-text" data-text="About Us">About Us</span>
+                </a>
               </div>
             </li>
           </ul>
