--- a/services/seo/index.html
+++ b/services/seo/index.html
@@ -360,6 +360,9 @@
                 >Contact Us</a
               >
             </li>
+            <li class="nav-item">
+              <a class="nav-link" href="../../inner_pages/about_us.html">About Us</a>
+            </li>
           </ul>
         </div>
 
@@ -483,11 +486,9 @@
 
             <li>
               <div class="o-hidden">
-                <a href="https://tally.so/r/nWKkvQ" class="link"
-                  ><span class="fill-text" data-text="Contact Us"
-                    >Contact Us</span
-                  ></a
-                >
+                <a href="../../inner_pages/about_us.html" class="link">
+                  <span class="fill-text" data-text="About Us">About Us</span>
+                </a>
               </div>
             </li>
           </ul>
