--- a/services/google_ads/index.html
+++ b/services/google_ads/index.html
@@ -232,6 +232,9 @@
               >
             </li>
             <li class="nav-item">
+              <a class="nav-link" href="../../inner_pages/about_us.html">About Us</a>
+            </li>
+            <li class="nav-item">
               <a class="nav-link" href="https://tally.so/r/nWKkvQ"
                 >Contact Us</a
               >
@@ -356,11 +359,9 @@
 
             <li>
               <div class="o-hidden">
-                <a href="https://tally.so/r/nWKkvQ" class="link"
-                  ><span class="fill-text" data-text="Contact Us"
-                    >Contact Us</span
-                  ></a
-                >
+                <a href="../../inner_pages/about_us.html" class="link">
+                  <span class="fill-text" data-text="About Us">About Us</span>
+                </a>
               </div>
             </li>
           </ul>
