--- a/services/web_dev/index.html
+++ b/services/web_dev/index.html
@@ -270,11 +270,9 @@
 
             <li>
               <div class="o-hidden">
-                <a href="https://tally.so/r/nWKkvQ" class="link"
-                  ><span class="fill-text" data-text="Contact Us"
-                    >Contact Us</span
-                  ></a
-                >
+                <a href="../../inner_pages/about_us.html" class="link">
+                  <span class="fill-text" data-text="About Us">About Us</span>
+                </a>
               </div>
             </li>
           </ul>
