seo service page content changed

--- a/inner_pages/service-details.html
+++ b/inner_pages/service-details.html
@@ -128,28 +128,28 @@
                         <div class="sub-menu">
                             <ul>
                                 <li>
-                                    <a href="../startup_agency/index.html" class="sub-link">Startup Agency</a>
+                                    <a href="#" class="sub-link">Startup Agency</a>
                                 </li>
                                 <li>
-                                    <a href="../creative-studio/index.html" class="sub-link">Creative Studio</a>
+                                    <a href="#" class="sub-link">Creative Studio</a>
                                 </li>
                                 <li>
-                                    <a href="../creative_agency/index.html" class="sub-link">Creative Agency</a>
+                                    <a href="#" class="sub-link">Creative Agency</a>
                                 </li>
                                 <li>
-                                    <a href="../digital-marketing/index.html" class="sub-link">Digital Marketing</a>
+                                    <a href="#" class="sub-link">Digital Marketing</a>
                                 </li>
                                 <li>
-                                    <a href="../modern_portfolio/index.html" class="sub-link">Modern Portfolio</a>
+                                    <a href="#" class="sub-link">Modern Portfolio</a>
                                 </li>
                                 <li>
-                                    <a href="../digital_studio/index.html" class="sub-link">Digital Studio</a>
+                                    <a href="#" class="sub-link">Digital Studio</a>
                                 </li>
                                 <li>
-                                    <a href="../modern_agency/index.html" class="sub-link">Modern Agency</a>
+                                    <a href="#" class="sub-link">Modern Agency</a>
                                 </li>
                                 <li>
-                                    <a href="../creative_agency2/index.html" class="sub-link">Creative Agency 2</a>
+                                    <a href="#" class="sub-link">Creative Agency 2</a>
                                 </li>
                             </ul>
                         </div>
