--- a/services/seo/index.html
+++ b/services/seo/index.html
@@ -869,7 +869,7 @@
                         class="butn butn-md butn-bord butn-rounded"
                       >
                         <div class="d-flex align-items-center">
-                          <span>Choose Silver Plan</span>
+                          <span>Choose Plan</span>
                           <span class="icon ml-10"
                             ><i class="fa-solid fa-chevron-right"></i
                           ></span>
@@ -883,7 +883,7 @@
                         class="butn butn-md butn-bord butn-rounded"
                       >
                         <div class="d-flex align-items-center">
-                          <span>Choose Gold Plan</span>
+                          <span>Choose Plan</span>
                           <span class="icon ml-10"
                             ><i class="fa-solid fa-chevron-right"></i
                           ></span>
@@ -897,7 +897,7 @@
                         class="butn butn-md butn-bg butn-rounded"
                       >
                         <div class="d-flex align-items-center">
-                          <span>Choose Premium Plan</span>
+                          <span>Choose Plan</span>
                           <span class="icon ml-10"
                             ><i class="fa-solid fa-chevron-right"></i
                           ></span>
