--- a/services/seo/index.html
+++ b/services/seo/index.html
@@ -55,42 +55,42 @@
       href="/sitemap.xml"
     />
 
-        <!-- Meta Pixel Code -->
-        <script>
-          !(function (f, b, e, v, n, t, s) {
-            if (f.fbq) return;
-            n = f.fbq = function () {
-              n.callMethod
-                ? n.callMethod.apply(n, arguments)
-                : n.queue.push(arguments);
-            };
-            if (!f._fbq) f._fbq = n;
-            n.push = n;
-            n.loaded = !0;
-            n.version = "2.0";
-            n.queue = [];
-            t = b.createElement(e);
-            t.async = !0;
-            t.src = v;
-            s = b.getElementsByTagName(e)[0];
-            s.parentNode.insertBefore(t, s);
-          })(
-            window,
-            document,
-            "script",
-            "https://connect.facebook.net/en_US/fbevents.js"
-          );
-          fbq("init", "3315422861933178");
-          fbq("track", "PageView");
-        </script>
-        <noscript
-          ><img
-            height="1"
-            width="1"
-            style="display: none"
-            src="https://www.facebook.com/tr?id=3315422861933178&ev=PageView&noscript=1"
-        /></noscript>
-        <!-- End Meta Pixel Code -->
+    <!-- Meta Pixel Code -->
+    <script>
+      !(function (f, b, e, v, n, t, s) {
+        if (f.fbq) return;
+        n = f.fbq = function () {
+          n.callMethod
+            ? n.callMethod.apply(n, arguments)
+            : n.queue.push(arguments);
+        };
+        if (!f._fbq) f._fbq = n;
+        n.push = n;
+        n.loaded = !0;
+        n.version = "2.0";
+        n.queue = [];
+        t = b.createElement(e);
+        t.async = !0;
+        t.src = v;
+        s = b.getElementsByTagName(e)[0];
+        s.parentNode.insertBefore(t, s);
+      })(
+        window,
+        document,
+        "script",
+        "https://connect.facebook.net/en_US/fbevents.js"
+      );
+      fbq("init", "3315422861933178");
+      fbq("track", "PageView");
+    </script>
+    <noscript
+      ><img
+        height="1"
+        width="1"
+        style="display: none"
+        src="https://www.facebook.com/tr?id=3315422861933178&ev=PageView&noscript=1"
+    /></noscript>
+    <!-- End Meta Pixel Code -->
 
     <!-- Metas -->
     <meta charset="utf-8" />
@@ -115,7 +115,9 @@
     <meta name="language" content="en" />
 
     <!-- Title  -->
-    <title>wk.pages | SEO Optimization & Search Engine Marketing Agency Warsaw</title>
+    <title>
+      wk.pages | SEO Optimization & Search Engine Marketing Agency Warsaw
+    </title>
 
     <meta
       property="og:title"
@@ -334,7 +336,7 @@
     >
       <div class="container">
         <!-- Logo -->
-        <a class="logo" href="#" style="border: none">
+        <a class="logo" href="https://www.wkpages.com/" style="border: none">
           <img
             src="../../assets/imgs/wk.pages-logo-white.svg"
             alt="wk.pages - Digital Agency Logo"
@@ -346,7 +348,9 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav">
             <li class="nav-item">
-              <a class="nav-link active" href="#">Home</a>
+              <a class="nav-link active" href="https://www.wkpages.com/"
+                >Home</a
+              >
             </li>
             <li class="nav-item">
               <a
@@ -361,7 +365,9 @@
               >
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="../../inner_pages/about_us.html">About Us</a>
+              <a class="nav-link" href="../../inner_pages/about_us.html"
+                >About Us</a
+              >
             </li>
           </ul>
         </div>
@@ -405,9 +411,13 @@
           <ul class="main-menu rest">
             <li>
               <div class="o-hidden">
-                <div class="link cursor-pointer dmenu">
-                  <span class="fill-text" data-text="Home">Home</span>
-                </div>
+                <a
+                  href="https://www.wkpages.com/"
+                  class="link cursor-pointer dmenu"
+                  ><span class="fill-text" data-text="Portfolio"
+                    >Home</span
+                  ></a
+                >
               </div>
             </li>
 
@@ -534,19 +544,17 @@
               <div class="row justify-content-between">
                 <div class="col-lg-5">
                   <div class="caption md-mb30">
-                    <h1>
-                      SEO Website Promotion <br />
-                    </h1>
+                    <h1>SEO Website Promotion <br /></h1>
                   </div>
                 </div>
                 <div class="col-lg-5">
                   <div class="text md-mb50">
                     <p>
                       Our comprehensive SEO services are designed for any
-                      website—from business card sites and service platforms
-                      to large e-commerce stores and content hubs. We build
-                      long-term marketing strategies to boost your
-                      popularity, drive traffic, and grow your business.
+                      website—from business card sites and service platforms to
+                      large e-commerce stores and content hubs. We build
+                      long-term marketing strategies to boost your popularity,
+                      drive traffic, and grow your business.
                     </p>
                     <a
                       href="https://tally.so/r/nWKkvQ"
@@ -647,8 +655,6 @@
 
           <!-- ==================== Start dark box ==================== -->
 
-
-
           <!-- ==================== End dark box ==================== -->
 
           <!-- ==================== Start Pricing ==================== -->
@@ -660,7 +666,8 @@
                 <div class="d-flex align-items-center mt-50">
                   <div class="text">
                     <p>
-                      Transparent, results-driven SEO plans for every business size.<br />
+                      Transparent, results-driven SEO plans for every business
+                      size.<br />
                       Choose your package and start ranking higher today.
                     </p>
                   </div>
@@ -817,7 +824,9 @@
                     </div>
 
                     <div class="price-bodyItems">
-                      <div class="price-bodyTitle">Analytics Report Analysis</div>
+                      <div class="price-bodyTitle">
+                        Analytics Report Analysis
+                      </div>
                       <div class="price-item">
                         <i class="fa-solid fa-check"></i>
                       </div>
@@ -910,7 +919,8 @@
 
               <div class="botm mt-70">
                 <span
-                  >Need a custom SEO solution? All our services are available individually.
+                  >Need a custom SEO solution? All our services are available
+                  individually.
                   <a href="https://tally.so/r/nWKkvQ">Contact Us</a></span
                 >
               </div>
@@ -953,9 +963,9 @@
                             With our SEO promotion, you can expect to see a
                             significant increase in your audience, a boost in
                             sales, and greater brand recognition. We focus on
-                            delivering stable, long-term growth by improving your
-                            search engine rankings and driving loyal traffic to
-                            your site.
+                            delivering stable, long-term growth by improving
+                            your search engine rankings and driving loyal
+                            traffic to your site.
                           </p>
                         </div>
                       </div>
@@ -984,8 +994,9 @@
                             The key advantages of SEO include higher rankings in
                             Google, increased organic traffic, and a lower cost
                             per acquired visitor compared to paid advertising.
-                            Additionally, SEO builds visitor loyalty and leads to
-                            a sustainable increase in sales and leads over time.
+                            Additionally, SEO builds visitor loyalty and leads
+                            to a sustainable increase in sales and leads over
+                            time.
                           </p>
                         </div>
                       </div>
@@ -1014,8 +1025,8 @@
                             Our process begins with a deep dive into your
                             business, followed by collecting and clustering the
                             semantic core. We then set up meta tags, perform
-                            search optimization for key sections, work on landing
-                            pages, and conduct daily monitoring to track
+                            search optimization for key sections, work on
+                            landing pages, and conduct daily monitoring to track
                             progress and make adjustments.
                           </p>
                         </div>
@@ -1042,9 +1053,9 @@
                       >
                         <div class="accordion-body">
                           <p>
-                            We conduct a thorough technical SEO audit to form the
-                            basis for internal optimization, including meta tags
-                            and internal linking. For external optimization
+                            We conduct a thorough technical SEO audit to form
+                            the basis for internal optimization, including meta
+                            tags and internal linking. For external optimization
                             (link building), we focus on placing high-quality
                             links to build your site's authority and improve its
                             ranking.
@@ -1075,9 +1086,9 @@
                           <p>
                             Yes, we offer SEO promotion for English-language
                             websites, considering the specifics of the
-                            international market and competition. Our services are
-                            adapted to global standards to help you reach a wider
-                            audience.
+                            international market and competition. Our services
+                            are adapted to global standards to help you reach a
+                            wider audience.
                           </p>
                         </div>
                       </div>
@@ -1106,8 +1117,8 @@
                             The cost of SEO promotion depends on factors like
                             project complexity and niche competition. Our rates
                             are based on the number of specialist hours (20, 30,
-                            or 40 per month), which directly affects the volume of
-                            work we can accomplish.
+                            or 40 per month), which directly affects the volume
+                            of work we can accomplish.
                           </p>
                         </div>
                       </div>
@@ -1200,9 +1211,7 @@
                       </a>
                     </div>
                     <div class="text mb-50">
-                      <h6>
-                        How to Improve Your Google Rankings in 2024
-                      </h6>
+                      <h6>How to Improve Your Google Rankings in 2024</h6>
                     </div>
                     <div class="img">
                       <img
@@ -1234,9 +1243,7 @@
                       </a>
                     </div>
                     <div class="text mb-50">
-                      <h6>
-                        The Ultimate Technical SEO Checklist for 2024
-                      </h6>
+                      <h6>The Ultimate Technical SEO Checklist for 2024</h6>
                     </div>
                     <div class="img">
                       <img
@@ -1425,7 +1432,7 @@
                 </div>
                 <div class="col-lg-4 d-flex justify-content-end">
                   <div class="links sub-color d-flex justify-content-between">
-                    <a href="#0" class="active">Home</a>
+                    <a href="https://www.wkpages.com/" class="active">Home</a>
                     <a
                       href="https://1drv.ms/b/c/f23709bddb7ed08a/EUBBw4xHDVBKjSRGXLBc38kBcefUa_8BneHpFWC65rF6tw?e=XUEnnH"
                       >Portfolio</a
