--- a/services/meta_ads/index.html
+++ b/services/meta_ads/index.html
@@ -218,7 +218,7 @@
     >
       <div class="container">
         <!-- Logo -->
-        <a class="logo" href="#" style="border: none">
+        <a class="logo" href="https://www.wkpages.com/" style="border: none">
           <img
             src="assets/imgs/wk.pages-logo-white.svg"
             alt="wk.pages - Digital Agency Logo"
@@ -230,7 +230,7 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav">
             <li class="nav-item">
-              <a class="nav-link active" href="#">Home</a>
+              <a class="nav-link active" href="https://www.wkpages.com/">Home</a>
             </li>
             <li class="nav-item">
               <a
@@ -286,9 +286,13 @@
           <ul class="main-menu rest">
             <li>
               <div class="o-hidden">
-                <div class="link cursor-pointer dmenu">
-                  <span class="fill-text" data-text="Home">Home</span>
-                </div>
+                <a
+                  href="https://www.wkpages.com/"
+                  class="link cursor-pointer dmenu"
+                  ><span class="fill-text" data-text="Portfolio"
+                    >Home</span
+                  ></a
+                >
               </div>
             </li>
 
